// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlainJsExternal 1`] = `
<h2>
  Hello World
</h2>
`;

exports[`PlainJsInternal 1`] = `
<h2>
  Hello World : 
  test
</h2>
`;

exports[`SimpleReasonReact 1`] = `
<h1>
  Hello World : test
</h1>
`;
